test/files/neg/t8704.check
t8704.scala:4: error: an implicit parameter section must be last
class C(i: Int)(implicit j: Int)(implicit k: Int)(n: Int) {
                ^
t8704.scala:4: error: multiple implicit parameter sections are not allowed
class C(i: Int)(implicit j: Int)(implicit k: Int)(n: Int) {
                                 ^
t8704.scala:8: warning: 2 parameter sections are effectively implicit
class D(private implicit val i: Int)(implicit s: String)
                                                        ^
one warning found
two errors found
